Fix feedback message label wrapping
- And make a cooler login page 😎

--- a/src/RX.Nyss.Web/ClientApp/src/components/feedback/FeedbackDialog.module.scss
+++ b/src/RX.Nyss.Web/ClientApp/src/components/feedback/FeedbackDialog.module.scss
@@ -1,6 +1,6 @@
 .feedbackContent {
-  width: 540px;
-  padding-bottom: 25px;
+  width: 550px;
+  padding-bottom: 25px !important;
 
   @media screen and (max-width: 1280px) {
     width: unset;
